--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ background-color: #404bbf;
 
 .features {
 }
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -104,7 +104,7 @@ background-color: #404bbf;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
 /* .features-list {
 }
